kubernetes/apps/storage-pve/overlays/workload-prd/tls-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: storage-pve
  namespace: storage-pve
spec:
  parentRefs:
    - name: external-services
      namespace: external-gateway
      sectionName: tls-storage-pve
  hostnames:
    - "storage.pve.yuriykovalchuk.dev"
  rules:
    - backendRefs:
        - name: storage-pve
          port: 8006
